--- a/main.html
+++ b/main.html
@@ -2,12 +2,42 @@
 	<head>
 		<title>Памятники</title>
 		<link rel="stylesheet" href="main.css" />
+		<link rel="shortcut icon" href="favicon.ico">
 	</head>
 
 	<body>
 		<div id="header">1</div>
-		<div id="main">2</div>
-		<div id="contacts">3</div>
-		<div id="footer">4</div>
+		
+			<div id="sel">
+				<div id="menu">
+					<img src="logo.jpg" width="25" height="25">
+					Памятники
+					<ul class="list">
+						<li>asas</li>
+						<li>azsdasdasdaz</li>
+						<li>popo</li>
+					</ul>
+					<img src="logo.jpg" width="25" height="25">
+					Цоколя
+					<ul class="list">
+						<li>asasdasdasas</li>
+						<li>azaz</li>
+						<li>popo</li>
+					</ul>
+					<img src="logo.jpg" width="25" height="25">
+					Ограды
+					<ul class="list">
+						<li>asasdasdasas</li>
+						<li>azaz</li>
+						<li>popo</li>
+					</ul>
+				</div>
+				<div id="case">
+					<div class="phone">425</div>
+				</div>
+			</div>
+			<div id="contacts">3</div>
+			<div id="footer">4</div>
+		
 	</body>
 </html>
